package monte_carlo_tree_search.interfaces;

public interface MapMemoryInterface<S> extends ReadableMemoryInterface<S>, WritableMemoryInterface<S> {

}
